# UI

./: .codespell  .codespellrc  .devcontainer.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pre-commit-search-and-replace.yaml  .pylintrc  .ruff.toml  .yamllint  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  README_DOCS.md  README_POPUPS.md  README_docs.md  README_popups.md  VERSION.md  __init__.py  _config.yml  _to_revise.md  configuration.yaml  custom-cards.md  examples.md  faq.md  hacs.json  index.html  index.md  info.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  (+4 more)
.devcontainer/: README.md  configuration.yaml  devcontainer.json  post-create.sh
.github/: CONTRIBUTING.md  contributing.md  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml  update_hacs_manifest.py
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature_request.md
.github/workflows/: automatic-custom-card-docs.yml  check-code-quality.yml  codeql-analysis.yml  codeql.yml  codespell.yml  contributors.yml  copy-custom-card-docs.yml  format-code.yml  format.yml  hacs-action.yml  hacs-validate.yml  labeler.yml  lint.yml  main.yml  pages-test.yml  pages.yml  release-drafter.yml  release.yml  test.yml
config/: configuration.yaml  virtual.yaml
config/minimalist-templates/: EN.yaml  button_card_templates.yaml  button_card_templates_revised.yaml  popups_templates.yaml
configuration/: themes.yaml
configuration/themes/: dark_mode.yaml  light.yaml  light_mobile.yaml
custom_card_light_color/: auto_color.yaml  card_light_color.yaml  card_light_icon_info.yaml  card_light_slider_collapse_color.yaml  card_light_slider_color.yaml  icon_info_light.yaml  list_item_lights.yaml
custom_cards/: README.md  custom_card_homeassistant_updates  custom_card_irmajavi_speedtest  custom_card_settings_notification_chip.yaml
custom_cards/_custom_card_playstation/: custom_card_playstation.yaml  readme.md
custom_cards/_custom_card_qubino/: custom_card_qubino.yaml  readme.md
custom_cards/_custom_card_thermostat/: custom_card_thermostat.yaml  readme.md
custom_cards/_custom_card_water_heater/: custom_card_water_heater.yaml  readme.md
custom_cards/custom_card_afvalophaling/: README.md  card_afvalophaling.yaml
custom_cards/custom_card_aircondition/: custom_card_aircondition.yaml
custom_cards/custom_card_alarm_time/: README.md  card_alarm_time.yaml
custom_cards/custom_card_apexcharts/: README.md  apexcharts.yaml  readme.md
custom_cards/custom_card_bar_card/: README.md  custom_card_bar_card.yaml  readme.md
custom_cards/custom_card_camera/: README.md  custom_card_camera.yaml
custom_cards/custom_card_chromecast/: README.md  custom_card_chromecast.yaml  readme.md
custom_cards/custom_card_cm000n_mdi_icon/: custom_card_cm000n_mdi_icon.yaml
custom_cards/custom_card_damix48_power_details/: README.md  custom_card_damix48_power_details.yaml
custom_cards/custom_card_device_tracker/: README.md  custom_card_device_tracker.yaml
custom_cards/custom_card_drealine_roomview/: README.md  custom_card_drealine_roomview.yaml
custom_cards/custom_card_eraycetinay_elapsed_time/: README.md  custom_card_eraycetinay_elapsed_time.yaml
custom_cards/custom_card_eraycetinay_lock/: README.md  custom_card_eraycetinay_lock.yaml
custom_cards/custom_card_esh_room/: README.md  custom_card_esh_room.yaml
custom_cards/custom_card_esh_welcome/: README.md  custom_card_esh_welcome.yaml
custom_cards/custom_card_fan/: card_fan.yaml  readme.md
custom_cards/custom_card_fan_slider/: card_fan_slider.yaml  readme.md
custom_cards/custom_card_haven_washer/: README.md  custom_card_haven_washer.yaml
custom_cards/custom_card_haven_washer_dryer/: README.md  custom_card_haven_washer_dryer.yaml
custom_cards/custom_card_heat_pump/: README.md  custom_card_heat_pump.yaml
custom_cards/custom_card_homeassistant_updates/: README.md  custom_card_homeassistant_updates.yaml  readme.md
custom_cards/custom_card_httpedo13_sun/: README.md  custom_card_httpedo13_sun.yaml  readme.md
custom_cards/custom_card_httpedo13_thermostat/: README.md  custom_card_httpedo13_thermostat.yaml  readme.md
custom_cards/custom_card_iAbadia_battery_chip/: README.md  custom_card_iAbadia_battery_chip.yaml
custom_cards/custom_card_imswel_medias/: README.md  custom_card_imswel_medias.yaml
custom_cards/custom_card_imswel_person/: README.md  custom_card_imswel_person.yaml
custom_cards/custom_card_input_datetime/: README.md  card_input_datetime.yaml  custom_card_input_datetime.yaml
custom_cards/custom_card_input_number/: README.md  card_input_number.yaml  readme.md
custom_cards/custom_card_irmajavi_entities/: README.md  custom_card_irmajavi_entities.yaml
custom_cards/custom_card_irmajavi_speedtest/: README.md  custom_card_irmajavi_speedtest.yaml
custom_cards/custom_card_irmajavi_weather/: README.md  custom_card_irmajavi_weather.yaml
custom_cards/custom_card_kepath_remotecontrol/: custom_card_kepath_remotecontrol_apple_tv.yaml  custom_card_kepath_remotecontrol_buttons.yaml  custom_card_kepath_remotecontrol_common.yaml  custom_card_kepath_remotecontrol_fire_tv 2.yaml  custom_card_kepath_remotecontrol_fire_tv.yaml  custom_card_kepath_remotecontrol_harmony.yaml  custom_card_kepath_remotecontrol_nvidia_shield 2.yaml  custom_card_kepath_remotecontrol_nvidia_shield.yaml
custom_cards/custom_card_kepath_room_extra_templates/: blue_presence_home.yaml  icons.yaml  (+7 more)
custom_chip_update/: README.md
custom_components/: __init__.py
data/: card_templates.yaml
docs/: Gemfile  README.md  README_DOCS.md  _config.yml  docs-style-guide.md  index.md  style-guide.md
examples/: 04_localisation.yaml
languages/: DE.yaml  DE_capitalized.yaml  EN.yaml  ES.yaml  FR.yaml  IT.yaml  NL.yaml  PL.yaml  PT.yaml  SE.yaml
overrides/: cards.html
scripts/: bootstrap  develop  help  lint  lint-check  lint-doc.sh  motd  setup  update  update-cards  update-cards.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
(+1322 files in other folders)
